# decoder

./: .gitignore  CMakeLists.txt  README.md  init_project.sh  test.txt
include/base/: version.h
models/: HCLG.fst  HCLG.fst.digiter
models/aspire/: HCLG.fst
src/: CMakeLists.txt  cvte-decoder.cc  decoder.cc  digiter-decoder.h  online-cvte-decoder.cc  online-decoder.cc  pre-decoder.cc  sil_splite.cc  split-util.h  word_splite.cc
src/fodecoders/: CMakeLists.txt  decoder.cc  keywords-decoder.h  pcm-reader.h  phone-decoder.cc  timit-phone-decoder.h
src/spkdecoders/: CMakeLists.txt  batch_decoder.cc  batch_sil_splite.cc  decoder.cc  digiter-decoder.h  keywords-decoder.h  make.sh  pre-decoder.cc  sil_splite.cc  split-util.h  word_splite.cc
test/thchs30-test/: A2_10.wav.trn  A2_11.wav.trn  A2_12.wav.trn  A2_13.wav.trn  A2_14.wav.trn  A2_16.wav.trn  A2_17.wav.trn  A2_18.wav.trn  A2_19.wav.trn  A2_20.wav.trn  A2_8.wav.trn  A2_9.wav.trn
